--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "preact build --no-prerender",
     "serve": "sirv build --cors --single",
     "dev": "preact watch",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "surge": "npm run build && npx surge ./build earnedit.surge.sh"
   },
   "eslintConfig": {
     "extends": "eslint-config-synacor"
@@ -26,12 +27,16 @@
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "classnames": "^2.2.6",
     "idb-keyval": "^3.2.0",
     "mongodb": "^3.5.7",
     "preact": "^10.1.0",
     "preact-head": "^1.0.3",
     "preact-render-to-string": "^5.1.2",
+    "react-pose": "^4.0.10",
+    "react-spring": "^8.0.27",
     "redux-bundler": "^27.0.0",
-    "redux-bundler-preact": "^2.0.1"
+    "redux-bundler-preact": "^2.0.1",
+    "surge": "^0.21.3"
   }
 }
